--- a/World Clock Alarm/Front-end/ReminderDetails/ReminderDetails.storyboard
+++ b/World Clock Alarm/Front-end/ReminderDetails/ReminderDetails.storyboard
@@ -99,7 +99,7 @@
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gLw-Mt-5dj">
                                                     <rect key="frame" x="347" y="0.0" width="51" height="31"/>
                                                     <connections>
-                                                        <action selector="Switch:" destination="CKx-M0-ypA" eventType="valueChanged" id="GWg-hl-Vfe"/>
+                                                        <action selector="switchTouchUpInside:" destination="CKx-M0-ypA" eventType="touchUpInside" id="mfJ-UF-1de"/>
                                                     </connections>
                                                 </switch>
                                             </subviews>
@@ -119,32 +119,33 @@
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DatePickerCell" id="4Ha-x2-i2O" customClass="DatePickerCell" customModule="World_Clock_Alarm" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="214.66666603088379" width="428" height="240"/>
+                                <rect key="frame" x="0.0" y="214.66666603088379" width="428" height="232"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="4Ha-x2-i2O" id="3jm-NK-NrS">
-                                    <rect key="frame" x="0.0" y="0.0" width="428" height="240"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="428" height="232"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="VLa-ap-rj6">
+                                        <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="RjH-Hb-2sW">
                                             <rect key="frame" x="16" y="8" width="396" height="216"/>
-                                            <subviews>
-                                                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="RjH-Hb-2sW">
-                                                    <rect key="frame" x="0.0" y="0.0" width="396" height="216"/>
-                                                </datePicker>
-                                            </subviews>
-                                        </stackView>
+                                            <connections>
+                                                <action selector="valueDidChange:" destination="4Ha-x2-i2O" eventType="valueChanged" id="HMh-Q2-l7y"/>
+                                            </connections>
+                                        </datePicker>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="VLa-ap-rj6" firstAttribute="leading" secondItem="3jm-NK-NrS" secondAttribute="leading" constant="16" id="BEs-01-ZDF"/>
-                                        <constraint firstItem="VLa-ap-rj6" firstAttribute="top" secondItem="3jm-NK-NrS" secondAttribute="top" constant="8" id="ggI-rL-x1I"/>
-                                        <constraint firstAttribute="trailing" secondItem="VLa-ap-rj6" secondAttribute="trailing" constant="16" id="tNw-mG-xcn"/>
-                                        <constraint firstAttribute="bottom" secondItem="VLa-ap-rj6" secondAttribute="bottom" constant="16" id="vXC-SA-2XD"/>
+                                        <constraint firstAttribute="bottom" secondItem="RjH-Hb-2sW" secondAttribute="bottom" constant="8" id="Nee-VZ-KOj"/>
+                                        <constraint firstItem="RjH-Hb-2sW" firstAttribute="top" secondItem="3jm-NK-NrS" secondAttribute="top" constant="8" id="Nn1-4I-PEJ"/>
+                                        <constraint firstItem="RjH-Hb-2sW" firstAttribute="leading" secondItem="3jm-NK-NrS" secondAttribute="leading" constant="16" id="c7X-fr-xRX"/>
+                                        <constraint firstAttribute="trailing" secondItem="RjH-Hb-2sW" secondAttribute="trailing" constant="16" id="rvT-0R-z3U"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="picker" destination="RjH-Hb-2sW" id="nSW-0A-dR1"/>
+                                </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DeleteButtonCell" id="vdA-6D-2fA">
-                                <rect key="frame" x="0.0" y="454.66666603088379" width="428" height="58.333332061767578"/>
+                                <rect key="frame" x="0.0" y="446.66666603088379" width="428" height="58.333332061767578"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vdA-6D-2fA" id="Vew-Sg-MrK">
                                     <rect key="frame" x="0.0" y="0.0" width="428" height="58.333332061767578"/>
